Rename the project to FetchBox

--- a/FyneApp.toml
+++ b/FyneApp.toml
@@ -1,6 +1,6 @@
 [Details]
   Icon = "Assets/Icon.png"
-  Name = "WPA"
-  ID = "io.github.Tom5521.WPA"
+  Name = "FetchBox"
+  ID = "io.github.Tom5521.FetchBox"
   Version = "2.1"
   Build = 23
