--- a/FyneApp.toml
+++ b/FyneApp.toml
@@ -1,6 +1,6 @@
 [Details]
   Icon = "Assets/Icon.png"
   Name = "FetchBox"
-  ID = "github.Tom5521.FetchBox"
+  ID = "Tom5521.github.io"
   Version = "2.3.2"
-  Build = 51
+  Build = 52
